[gd_scene load_steps=7 format=3 uid="uid://co1gpl0ybl361"]

[ext_resource type="Script" uid="uid://ogn6g22ml6ik" path="res://scripts/Characthers/boatlevel/PlayerRedGlob.gd" id="1_yxba6"]
[ext_resource type="Shader" uid="uid://bhajiqb2go0su" path="res://shaders/PlayerRedGlob.gdshader" id="2_xwdaj"]
[ext_resource type="ArrayMesh" uid="uid://dnlysv02q21bn" path="res://prefabs/redglobe.obj" id="3_q4pf8"]
[ext_resource type="AudioStream" uid="uid://c518ckkiay50l" path="res://sounds/SFX/Player/Blaster.wav" id="4_j0syb"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_mvmxn"]
render_priority = 0
shader = ExtResource("2_xwdaj")
shader_parameter/body_color = Color(0.363961, 5.92008e-06, 0.258745, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_0b27p"]
size = Vector3(2, 2, 2)

[node name="PlayerRedGlob" type="CharacterBody3D" groups=["player"]]
disable_mode = 2
collision_layer = 2
collision_mask = 269
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
motion_mode = 1
platform_on_leave = 2
platform_floor_layers = 4294967041
platform_wall_layers = 1
script = ExtResource("1_yxba6")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00246859, 9.53674e-07, -0.028224)
material_override = SubResource("ShaderMaterial_mvmxn")
mesh = ExtResource("3_q4pf8")

[node name="Marker3D" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.19861, 0, 0)

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="BlasterSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_j0syb")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_0b27p")

[node name="DisableEnemyCollision" type="Timer" parent="."]
wait_time = 3.0

[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
[connection signal="timeout" from="DisableEnemyCollision" to="." method="_on_disable_enemy_collision_timeout"]
